@@ -16,6 +16,7 @@
  - Fixed sticky labels.
  - Fixed last.fm schedule updates.
  - Fixed broken last.fm links.
+ - Fixed exception logging.
  - Added history for twitter-fetcher (contrib).
  - Added an option to disable voting (config).
  - Added automatic promotion of most active voters to admins.
